force-app/main/default/objects/cgcloud__Product_Assortment_Order_Template__c/cgcloud__Product_Assortment_Order_Template__c.object-meta.xml
<CustomObject>
    <description>Holds the details of the relationship between product assortment and order template.</description>
    <label>Product Assortment Order Template</label>
    <nameField>
        <displayFormat>PAO-{000000}</displayFormat>
        <label>Product Assortment  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Assortment Order Templates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>