force-app/main/default/objects/cgcloud__Product_Assortment_Order_Template__c/fields/cgcloud__Order_Template__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Order_Template__c</fullName>
    <description>Reference to a order template assigned to the assortment.</description>
    <label>Order Template</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>cgcloud__Order_Template__c.cgcloud__Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>cgcloud__Order_Template__c</referenceTo>
    <relationshipLabel>Product Assortment Order Templates</relationshipLabel>
    <relationshipName>Product_Assortment_Order_Templates</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>