force-app/main/default/objects/cgcloud__Product_Assortment_Order_Template__c/fields/cgcloud__Product_Assortment__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Product_Assortment__c</fullName>
    <description>Reference to the assortment the order template relation belongs to.</description>
    <label>Product Assortment</label>
    <lookupFilter>
        <active>false</active>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Assortment</referenceTo>
    <relationshipLabel>Order Templates</relationshipLabel>
    <relationshipName>Product_Assortment_Order_Templates</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>