force-app/main/default/objects/cgcloud__Product_Assortment_Order_Template__c/validationRules/cgcloud__ORDER_TEMPLATE_ASSIGNMENT.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__ORDER_TEMPLATE_ASSIGNMENT</fullName>
    <active>false</active>
    <errorConditionFormula>If(cgcloud__Product_Assortment__r.cgcloud__Product_Assortment_Template__r.RecordType.DeveloperName &lt;&gt; $Label.cgcloud__PRD_TEMP_SDA,true,false )</errorConditionFormula>
    <errorMessage>Order Template can only be assigned to Sales Document Assortments.</errorMessage>
</ValidationRule>