force-app/main/default/objects/cgcloud__Product_Assortment_Order_Template__c/validationRules/cgcloud__Order_template_should_be_assigned_to_SDA.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Order_template_should_be_assigned_to_SDA</fullName>
    <active>false</active>
    <errorConditionFormula>If(cgcloud__Product_Assortment__r.cgcloud__Product_Assortment_Template__r.RecordType.DeveloperName &lt;&gt; &apos;Sales_Document_Assortments&apos;,true,false )</errorConditionFormula>
    <errorMessage>Order Template can&apos;t be assigned to Customer Selling Assortment or Authorization List.</errorMessage>
</ValidationRule>